fix: align font-size AB#26572

--- a/interfaces/Portal/src/app/program/payment-history-accordion/payment-history-accordion.component.scss
+++ b/interfaces/Portal/src/app/program/payment-history-accordion/payment-history-accordion.component.scss
@@ -1,14 +1,3 @@
-.accordion-text {
-  font-weight: 400;
-  font-size: 14px;
-  line-height: 140%;
-  color: var(--ion-color-accordion-text);
-}
-
-.padding {
-  padding: 7px 5px 5px 5px;
-}
-
 details {
   summary {
     list-style-type: none;
